fix and feat: fix mapper to mapper struct and feat jwt, security and authentication